# leetcode

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
001-contains-duplicate/: test_contains_duplicate.py
002-valid-anagram/: test_valid_anagram.py
003-two-sum/: test_two_sum.py
004-group-anagram/: test_group_anagram.py
005-top-k-frequent-elements/: test_top_k_frequent_elements.py
006-product-of-array-except-self/: test_product_of_array_expect_self.py
007-valid-sudoku/: test_valid_sudoku.py
008-encode-and-decode-strings/: test_encode_and_decode_strings.py
009-longest-consecutive-sequence/: test_longest_consecutive_sequence.py
010-valid-palindrome/: test_valid_palindrome.py
011-two-sum-2-input-array-is-sorted/: test_two_sum_2_input_array_is_sorted.py
012-3-sum/: test_3_sum.py
013-container-with-most-water/: test_container_with_most_water.py
014-trapping-rain-water/: test_trapping_rain_water.py
015-best-time-to-buy-and-sell-stock/: test_best_time_to_buy_and_sell_stock.py
016-longest-substring-without-repeating-characters/: test_longest_substring_without_repeating_characters.py
017-longest-repeating-character-replacement/: test_longest_repeating_character_replacement.py
018-permutation-in-string/: test_permutation_in_string.py
019-minimum-window-substring/: test_minimum_window_substring.py
020-sliding-window-maximum/: test_sliding_window_maximum.py
021-valid-parentheses/: test_valid_parentheses.py
022-min-stack/: test_min_stack.py
023-evaluate-reverse-polish-notation/: test_evaluate_reverse_polish_notation.py
024-generate-parentheses/: test_generate_parentheses.py
025-daily-temperatures/: test_daily_temperatures.py
026-car-fleet/: test_car_fleet.py
027-largest-rectangle-in-histogram/: test_largest_rectangle_in_histogram.py
028-binary-search/: test_binary_search.py
029-search-a-2d-matrix/: test_search_a_2d_matrix.py
(+42 files in other folders)
