[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Kunte Lin <kuntelin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-benchmark = "^4.0.0"
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
