[project]
name = "leetcode"
version = "0.1.0"
description = "KunteLin's LeetCode practice"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
addopts = "-s --benchmark-disable"
log_cli = 0
log_cli_level = "ERROR"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
junit_duration_report = "call"
