[project]
name = "leetcode"
version = "0.1.0"
description = "KunteLin's LeetCode practice"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 120
ignore = [
    "E741",  # Ambiguous variable name
]

[tool.ruff.lint]
# Disable the automatic fixing (removal) of unused imports (F401).
unfixable = ["F401"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--benchmark-disable"

# * LOG
# *   - 使用"--log-level"時，只顯示測試案例失敗的LOG，顯示於每個案例的"Captured log call"區塊
# *   - 使用"--log-cli-level"時，顯示所有測試案例的LOG，顯示於"live log call"區塊(最上方)

# * LOG - log setting
log_format = "%(levelname)-8s %(name)s:%(lineno)s - %(message)s"

# * LOG - log cli setting
log_cli_format = "%(levelname)-8s %(name)s:%(lineno)s - %(message)s"

junit_duration_report = "call"
